# yodagpt-gamedev-lab

./: .gitignore  Makefile
backend/: README.md  pyproject.toml
backend/app/: .env  main.py
backend/app/agents/: blender_agent.py  godot_agent.py  godot_rag_chain.py
backend/app/db/: models.py  session.py
backend/app/ingest/: ingest_godot.py  ingest_router.py
backend/app/memory/: db_memory.py  langchain_db_buffer.py  session_manager.py  sqlite_memory.py
backend/app/rag/: embedding_engine.py  faiss_store.py
backend/app/routes/: agents.py  chat.py  history.py  sessions.py
backend/app/schemas/: chat.py
backend/app/scripts/: ingest_blender_pdf.py  register_agents.py  setup_db.py  tasks.py
backend/app/services/: ollama_client.py
requests/requests/: Chat com agent.bru  Chat.bru
requests/requests/Agents/: Agents.bru  folder.bru
requests/requests/Sessions/: Get Sessions For Agent.bru  Get Sessions.bru  Sessions.bru
